# easy-ergsocket

./: CMakeLists.txt  README.md
proto/: Erg.proto
python/: Erg_pb2.py  testclient.py
src/: CMakeLists.txt
src/impl/: main.cpp
